Renamed workflow job.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,7 +23,7 @@ env:
   REPO: homebrew-core
 
 jobs:
-  homebrew:
+  bump-homebrew-formula:
     name: Bump Homebrew formula
     runs-on: ubuntu-latest
     permissions:
