--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,7 +26,7 @@ jobs:
       contents: write
       pull-requests: write
     steps:
-      - name: Checkout Source Repository
+      - name: Checkout source repository
         uses: actions/checkout@v4
 
       - uses: mislav/bump-homebrew-formula-action@v3
