--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,8 +5,12 @@ on:
     types: [update-formula]
   workflow_dispatch:
     inputs:
-      formula_version:
-        description: "Version of the formula"
+      formula_previous_version:
+        description: "Previous version of the formula"
+        required: true
+        type: string
+      formula_new_version:
+        description: "New version of the formula"
         required: true
         type: string
       formula_name:
@@ -35,11 +39,12 @@ jobs:
           formula-path: Formula/${{ env.FORMULA_NAME }}.rb
           download-url: ${{ env.FORMULA_URL }}
           homebrew-tap: ${{ github.repository }}
-          tag-name: ${{ env.FORMULA_VERSION }}
+          tag-name: v${{ env.FORMULA_NEW_VERSION }}
           base-branch: master
-          commit-message: ${{ env.FORMULA_NAME }} ${{ env.FORMULA_VERSION }}
+          commit-message: ${{ env.FORMULA_NAME }} ${{ env.FORMULA_NEW_VERSION }}
         env:
           COMMITTER_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          FORMULA_VERSION: ${{ github.event_name == 'repository_dispatch' && github.event.client_payload.formula_version || inputs.formula_version }}
+          FORMULA_PREVIOUS_VERSION: ${{ github.event_name == 'repository_dispatch' && github.event.client_payload.formula_previous_version || inputs.formula_previous_version }}
+          FORMULA_NEW_VERSION: ${{ github.event_name == 'repository_dispatch' && github.event.client_payload.formula_new_version || inputs.formula_new_version }}
           FORMULA_NAME: ${{ github.event_name == 'repository_dispatch' && github.event.client_payload.formula_name || inputs.formula_name }}
           FORMULA_URL: ${{ github.event_name == 'repository_dispatch' && github.event.client_payload.formula_url || inputs.formula_url }}
