--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -33,7 +33,8 @@ jobs:
       - name: Checkout source repository
         uses: actions/checkout@v4
 
-      - uses: mislav/bump-homebrew-formula-action@v3
+      - name: Update Homebrew formula
+        uses: mislav/bump-homebrew-formula-action@v3
         with:
           formula-name: ${{ env.FORMULA_NAME }}
           formula-path: Formula/${{ env.FORMULA_NAME }}.rb
