Another attempted fix of permissions issue: "POST /repos/jakob-bagterp/timer-for-python/forks - 403 in 96ms Error: HttpError: Resource not accessible by integration GET /user - 403 in 125ms"

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -38,9 +38,7 @@ jobs:
   bump-homebrew-formula:
     name: Bump Homebrew formula
     runs-on: ubuntu-latest
-    permissions:
-      contents: write
-      pull-requests: write
+    permissions: write-all
     steps:
       - name: Checkout source repository
         uses: actions/checkout@v4
