Revert "Another attempted fix of permissions issue: "POST /repos/jakob-bagterp/timer-for-python/forks - 403 in 96ms"
This reverts commit 61f4914e50a954fd48fa90678632ca42671eabb1.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -38,7 +38,9 @@ jobs:
   bump-homebrew-formula:
     name: Bump Homebrew formula
     runs-on: ubuntu-latest
-    permissions: write-all
+    permissions:
+      contents: write
+      pull-requests: write
     steps:
       - name: Checkout source repository
         uses: actions/checkout@v4
