Attempted fix of issue: "GET /repos/jakob-bagterp/timer-for-python/contents/Formula%2Ftimer-for-python.rb?ref=update-timer-for-python.rb-1730618974 - 404 in 153ms Error: HttpError: Not Found"

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -53,7 +53,7 @@ jobs:
           formula-name: ${{ env.FORMULA_NAME }}
           formula-path: Formula/${{ env.FORMULA_NAME }}.rb
           download-url: ${{ env.FORMULA_URL }}
-          homebrew-tap: ${{ env.FORMULA_HOMEBREW_TAP }}
+          homebrew-tap: ${{ github.repository }}
           tag-name: v${{ env.FORMULA_NEW_VERSION }}
           base-branch: master
           create-pullrequest: true
