--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -77,4 +77,4 @@ jobs:
           git config user.email "actions@github.com"
           git add README.md
           git commit -m "Update version badge to ${{ env.FORMULA_NEW_VERSION }}"
-          git push origin master
+          git push origin HEAD:${{ github.head_ref }}
