--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -60,18 +60,23 @@ jobs:
     needs: bump-homebrew-formula
     permissions:
       contents: write
+      pull-requests: write
     steps:
       - name: Checkout source repository
         uses: actions/checkout@v4
 
-      - name: Update version in README.md
+      - name: Update version badge in README.md
         run: |
           sed -i "s/label=version\&message=[0-9].*\&/label=version\&message=${{ env.FORMULA_NEW_VERSION }}\&/" README.md
 
-      - name: Commit README.md update
-        run: |
-          git config user.name "GitHub Actions"
-          git config user.email "actions@github.com"
-          git add README.md
-          git commit -m "Update version badge to ${{ env.FORMULA_NEW_VERSION }}" --verbose
-          git push origin HEAD:${{ github.ref_name }}
+      - name: Commit changes and create pull request
+        uses: peter-evans/create-pull-request@v5
+        with:
+          commit-message: "Updated version badge to ${{ env.FORMULA_NEW_VERSION }}"
+          title: "Update version badge to ${{ env.FORMULA_NEW_VERSION }}"
+          body: "This pull request updates the version badge in README.md to version ${{ env.FORMULA_NEW_VERSION }}."
+          branch: update-version-badge-${{ env.FORMULA_NEW_VERSION }}
+          labels: enhancement
+          base: master
+          delete-branch: true
+          token: ${{ secrets.COMMITTER_TOKEN }}
