--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -69,6 +69,9 @@ jobs:
         run: |
           sed -i "s/label=version\&message=[0-9].*\&/label=version\&message=${{ env.FORMULA_NEW_VERSION }}\&/" README.md
 
+      - name: Show changes in Git
+        run: git diff --patch --stat
+
       - name: Commit changes and create pull request
         uses: peter-evans/create-pull-request@v5
         with:
