--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -54,6 +54,16 @@ jobs:
           create-pullrequest: true
           commit-message: Updated formula to version ${{ env.FORMULA_NEW_VERSION }}
 
+      - name: Try to enable auto-merge of pull request
+        env:
+          GITHUB_TOKEN: ${{ secrets.COMMITTER_TOKEN }}
+        run: | # Ignore errors if pull request can't be merged
+          sleep 2
+          PULL_REQUEST_NUMBER=$(gh pr list --json number --jq '.[0].number' || echo "")
+          if [ ! -z "$PULL_REQUEST_NUMBER" ]; then
+            gh pr merge $PULL_REQUEST_NUMBER --auto --merge || true
+          fi
+
   update-version-badge:
     name: Update version badge in README.md
     runs-on: ubuntu-latest
@@ -73,6 +83,7 @@ jobs:
         run: git diff --patch --stat
 
       - name: Commit changes and create pull request
+        id: update-version-badge-pull-request
         uses: peter-evans/create-pull-request@v5
         with:
           commit-message: "Updated version badge to ${{ env.FORMULA_NEW_VERSION }}"
@@ -83,3 +94,10 @@ jobs:
           base: master
           delete-branch: true
           token: ${{ secrets.COMMITTER_TOKEN }}
+
+      - name: Try to enable auto-merge of pull request
+        if: steps.update-version-badge-pull-request.outputs.pull-request-operation == 'created'
+        uses: peter-evans/enable-pull-request-automerge@v3
+        with:
+          token: ${{ secrets.COMMITTER_TOKEN }}
+          pull-request-number: ${{ steps.update-version-badge-pull-request.outputs.pull-request-number }}
