--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -54,6 +54,9 @@ jobs:
           create-pullrequest: true
           commit-message: Updated formula to version ${{ env.FORMULA_NEW_VERSION }}
 
+      - name: Wait for pre-commit checks to complete
+        run: sleep 10
+
       - name: Try to enable auto-merge of pull request and delete branch
         env:
           GITHUB_TOKEN: ${{ secrets.HOMEBREW_TAP_TOKEN }}
