--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -5,6 +5,11 @@ on:
     types:
       - labeled
 
+permissions:
+  contents: read
+  pull-requests: write
+  packages: read
+
 jobs:
   brew-pr-pull:
     name: Homebrew pull request bottles
